force-app/main/default/objects/Stripe__mdt/Stripe__mdt.object-meta.xml
<CustomObject>
    <label>Stripe</label>
    <pluralLabel>Stripes</pluralLabel>
</CustomObject>