force-app/main/default/objects/Stripe__mdt/fields/ENCRYPTION_KEY__c.field-meta.xml
<CustomField>
    <fullName>ENCRYPTION_KEY__c</fullName>
    <label>ENCRYPTION KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>