force-app/main/default/objects/Stripe__mdt/fields/IV__c.field-meta.xml
<CustomField>
    <fullName>IV__c</fullName>
    <label>IV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>