force-app/main/default/objects/Stripe__mdt/fields/Proxy_URL__c.field-meta.xml
<CustomField>
    <fullName>Proxy_URL__c</fullName>
    <label>Proxy URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>